--- a/Visualization_Cars.ipynb
+++ b/Visualization_Cars.ipynb
@@ -388,10 +388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Get Geospatial plot of car locations by showing clusters\n",
-    "# TODO: Get rid of NaN rows or instead skip Vorbesitzer and Verbrauch column?\n",
-    "# TODO: Analyse relationship of price and other variables\n",
-    "# TODO: Include text description of the cars by adapting the webscraper a little bit"
+    "# TODO: Get rid of NaN rows or instead skip Vorbesitzer and Verbrauch column?\n"
    ]
   },
   {
